// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter override custom filter correctly 1`] = `
<div
  className="fishd-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setSelectedKeys"
    onClick={[Function]}
  >
    setSelectedKeys
  </span>
  <span
    id="confirm"
    onClick={[Function]}
  >
    Confirm
  </span>
  <span
    id="reset"
    onClick={[Function]}
  >
    Reset
  </span>
</div>
`;

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div
    class="fishd-dropdown  fishd-dropdown-placement-bottomLeft  fishd-dropdown-hidden"
  >
    <div>
      <div
        class="custom-filter-dropdown"
      >
        custom filter
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon correctly 1`] = `
<span
  class="fishd-table-filter-icon fishd-dropdown-trigger"
  style=""
  title="筛选"
>
  filtered
</span>
`;

exports[`Table.filter renders custom filter icon correctly 2`] = `
<span
  class="fishd-table-filter-icon fishd-dropdown-trigger"
  style=""
  title="筛选"
>
  unfiltered
</span>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="fishd-table-wrapper"
>
  <div
    class="fishd-spin-nested-loading"
  >
    <div
      class="fishd-spin-nested"
    >
      <div>
        <div
          class="fishd-table fishd-table-default fishd-table-scroll-position-left"
        >
          <div
            class="fishd-table-content"
          >
            <div
              class="fishd-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col />
                </colgroup>
                <thead
                  class="fishd-table-thead"
                >
                  <tr>
                    <th
                      class="fishd-table-column-has-filters"
                    >
                      <span>
                        Name
                        <i
                          class="fishdicon fishdicon-filter fishd-dropdown-trigger"
                          title="筛选"
                        />
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="fishd-table-tbody"
                >
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="0"
                  >
                    <td
                      class="fishd-table-column-has-filters"
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Jack
                    </td>
                  </tr>
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="fishd-table-column-has-filters"
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Lucy
                    </td>
                  </tr>
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="fishd-table-column-has-filters"
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Tom
                    </td>
                  </tr>
                  <tr
                    class="fishd-table-row fishd-table-row-level-0"
                    data-row-key="3"
                  >
                    <td
                      class="fishd-table-column-has-filters"
                    >
                      <span
                        class="fishd-table-row-indent indent-level-0"
                        style="padding-left:0px"
                      />
                      Jerry
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
